changed the role

--- a/home_app/templates/homepage.html
+++ b/home_app/templates/homepage.html
@@ -2,7 +2,7 @@
 <div class="home_container">
   <h1 class="title1">Hello, my name is</h1>
   <h1 class="title2">Lokesh n s</h1>
-  <h1 class="title3">I'm a <span>web developer</span></h1>
+  <h1 class="title3">I'm a <span>Cloud DevOps Engineer</span></h1>
   <div class="icons_list">
     <a href="https://github.com/lokesh-ns" class="list git">
       <i class="fa-brands fa-github"></i>
