changing navbar color to green

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #171b3c;
+  background-color: #213c17;
 }
 
 .nav_container .logo {
